@@ -472,12 +472,24 @@ int main(int argc, char **argv)
         printf("\n# performance\n");
         printf("# -----------\n");
         printf("# total_bytes: %" PRId64 "\n", pdata.total_bytes);
-        printf("# slowest_rank_time: %lf\n", pdata.slowest_rank_time);
-        printf("# slowest_rank_meta_time: %lf\n", pdata.slowest_rank_meta_time);
-        printf("# shared_time_by_cumul: %lf\n", pdata.shared_time_by_cumul);
-        printf("# shared_time_by_open: %lf\n", pdata.shared_time_by_open);
-        printf("# shared_time_by_open_lastio: %lf\n", pdata.shared_time_by_open_lastio);
-        printf("# shared_meta_time: %lf\n", pdata.shared_meta_time);
+        printf("#\n");
+        printf("# I/O timing for unique files (seconds):\n");
+        printf("# ...........................\n");
+        printf("# unique files: slowest_rank_time: %lf\n", pdata.slowest_rank_time);
+        printf("# unique files: slowest_rank_meta_time: %lf\n", pdata.slowest_rank_meta_time);
+        printf("#\n");
+        printf("# I/O timing for shared files (seconds):\n");
+        printf("# (multiple estimates shown; time_by_slowest is generally the most accurate)\n");
+        printf("# ...........................\n");
+        printf("# shared files: time_by_cumul_io_only: %lf\n", pdata.shared_time_by_cumul);
+        printf("# shared files: time_by_cumul_meta_only: %lf\n", pdata.shared_meta_time);
+        printf("# shared files: time_by_open: %lf\n", pdata.shared_time_by_open);
+        printf("# shared files: time_by_open_lastio: %lf\n", pdata.shared_time_by_open_lastio);
+        printf("# shared files: time_by_slowest: %lf\n", pdata.shared_time_by_slowest);
+        printf("#\n");
+        printf("# Aggregate performance, including both shared and unique files (MiB/s):\n");
+        printf("# (multiple estimates shown; agg_perf_by_slowest is generally the most accurate)\n");
+        printf("# ...........................\n");
         printf("# agg_perf_by_cumul: %lf\n", pdata.agg_perf_by_cumul);
         printf("# agg_perf_by_open: %lf\n", pdata.agg_perf_by_open);
         printf("# agg_perf_by_open_lastio: %lf\n", pdata.agg_perf_by_open_lastio);
