@@ -24,6 +24,7 @@ darshan-2.2.9-pre1
     investigated by Davide Del Vento.
   - Ability to disable shared-file reduction by setting the
     DARSHAN_DISABLE_SHARED_REDUCTION environment variable.
+  - More thorough output from darshan-parser --perf, suggested by Huong Luu.
 
 darshan-2.2.8
 =============
